--- a/StudentManagementSystem/Views/Student/Create.cshtml
+++ b/StudentManagementSystem/Views/Student/Create.cshtml
@@ -4,28 +4,31 @@
     ViewData["Title"] = "Create Student";
 }
 
-<h2>Create Student</h2>
+<div class="container mt-4">
+    <div class="card shadow">
+        <div class="card-header bg-primary text-white">
+            <h4>Add New Student</h4>
+        </div>
+        <div class="card-body">
+            <form asp-action="Create" method="post">
+                <div class="mb-3">
+                    <label class="form-label">Name</label>
+                    <input asp-for="Name" class="form-control" />
+                </div>
 
-<form asp-action="Create" method="post">
-    <div>
-        <label>Name</label><br />
-        <input asp-for="Name" />
+                <div class="mb-3">
+                    <label class="form-label">Email</label>
+                    <input asp-for="Email" class="form-control" />
+                </div>
+
+                <div class="mb-3">
+                    <label class="form-label">Age</label>
+                    <input asp-for="Age" type="number" class="form-control" />
+                </div>
+
+                <button type="submit" class="btn btn-success">Save</button>
+                <a asp-action="Index" class="btn btn-secondary ms-2">Back</a>
+            </form>
+        </div>
     </div>
-
-    <div>
-        <label>Email</label><br />
-        <input asp-for="Email" />
-    </div>
-
-    <div>
-        <label>Age</label><br />
-        <input asp-for="Age" type="number" />
-    </div>
-
-    <br />
-    <button type="submit">Save</button>
-</form>
-
-<p>
-    <a asp-action="Index">Back to List</a>
-</p>
+</div>
